[gd_scene load_steps=16 format=3 uid="uid://brwnly3mkqong"]

[ext_resource type="Script" path="res://Scripts/PlayerStuff/Player.gd" id="1_tc1q1"]
[ext_resource type="Script" path="res://Scripts/PlayerStuff/StateMachine/StateMachine.gd" id="2_6kajl"]
[ext_resource type="Script" path="res://Scripts/PlayerStuff/CurrentItem.gd" id="2_733f7"]
[ext_resource type="PackedScene" uid="uid://csmo44jxhcruy" path="res://Scenes/PlayerStuff/player_visuals.tscn" id="2_vvtxs"]
[ext_resource type="Script" path="res://Scripts/PlayerStuff/StateMachine/States/ground.gd" id="3_a0god"]
[ext_resource type="PackedScene" uid="uid://bw10v8fuf0s" path="res://Scenes/Items/Harpoon/Harpoon.tscn" id="3_rewrb"]
[ext_resource type="PackedScene" uid="uid://c6prtwim3sp27" path="res://Scenes/Items/Harpoon/spear.tscn" id="4_826q0"]
[ext_resource type="Script" path="res://Scripts/PlayerStuff/StateMachine/States/air.gd" id="4_4880s"]
[ext_resource type="Script" path="res://Scripts/PlayerStuff/StateMachine/States/under_water.gd" id="5_72egl"]
[ext_resource type="Script" path="res://Scripts/PlayerStuff/BreathManager.gd" id="5_moun1"]
[ext_resource type="Script" path="res://Scripts/PlayerStuff/PlayerUI.gd" id="6_vpkmo"]
[ext_resource type="PackedScene" uid="uid://cf5hhr3m44idf" path="res://Scenes/Inventory/inventory.tscn" id="7_g6qgq"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6hkpu"]
height = 42.0

[sub_resource type="CircleShape2D" id="CircleShape2D_vvl13"]
radius = 9.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0cxwr"]
radius = 13.0
height = 54.0

[node name="Player" type="CharacterBody2D" groups=["Player"]]
collision_mask = 72
floor_snap_length = 5.3
platform_on_leave = 1
script = ExtResource("1_tc1q1")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("2_6kajl")
initial_state = NodePath("ground")

[node name="ground" type="Node" parent="StateMachine" node_paths=PackedStringArray("air", "under_water")]
script = ExtResource("3_a0god")
air = NodePath("../air")
under_water = NodePath("../under_water")

[node name="air" type="Node" parent="StateMachine" node_paths=PackedStringArray("ground", "under_water")]
script = ExtResource("4_4880s")
ground = NodePath("../ground")
under_water = NodePath("../under_water")

[node name="under_water" type="Node" parent="StateMachine" node_paths=PackedStringArray("air")]
script = ExtResource("5_72egl")
air = NodePath("../air")

[node name="Player_visuals" parent="." instance=ExtResource("2_vvtxs")]
position = Vector2(0, 17)
scale = Vector2(0.15, 0.15)

[node name="UpperBody" parent="Player_visuals/Skeleton2D/root" index="0"]
scale = Vector2(0.999996, 0.999996)

[node name="Head" parent="Player_visuals/Skeleton2D/root/UpperBody" index="0"]
scale = Vector2(0.999999, 0.999999)

[node name="F_Arm" parent="Player_visuals/Skeleton2D/root/UpperBody" index="1"]
scale = Vector2(0.999995, 0.999995)

[node name="B_Arm" parent="Player_visuals/Skeleton2D/root/UpperBody" index="2"]
scale = Vector2(0.999996, 0.999996)

[node name="H_Arm" parent="Player_visuals/Skeleton2D/root/UpperBody" index="3"]
scale = Vector2(1, 1)

[node name="F_Leg" parent="Player_visuals/Skeleton2D/root/LowerBody" index="0"]
scale = Vector2(0.999994, 0.999994)

[node name="F_Foot" parent="Player_visuals/Skeleton2D/root/LowerBody/F_Leg/F_Calf" index="0"]
scale = Vector2(0.999996, 0.999996)

[node name="B_Leg" parent="Player_visuals/Skeleton2D/root/LowerBody" index="1"]
scale = Vector2(0.999996, 0.999996)

[node name="B_Foot" parent="Player_visuals/Skeleton2D/root/LowerBody/B_Leg/B_Calf" index="0"]
scale = Vector2(0.999994, 0.999994)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("CapsuleShape2D_6hkpu")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.75, 1.75)
position_smoothing_enabled = true

[node name="CurrentItem" type="Node2D" parent="."]
position = Vector2(0, -2)
script = ExtResource("2_733f7")

[node name="BreathManager" type="CharacterBody2D" parent="."]
visible = false
collision_mask = 0
script = ExtResource("5_moun1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BreathManager"]
position = Vector2(1, -20)
shape = SubResource("CircleShape2D_vvl13")

[node name="CatchItem" type="Area2D" parent="."]
visible = false
position = Vector2(0, -5)
collision_mask = 52

[node name="CollisionShape2D" type="CollisionShape2D" parent="CatchItem"]
shape = SubResource("CapsuleShape2D_0cxwr")

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("6_vpkmo")

[node name="OxigenBar" type="ProgressBar" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 18.0
offset_top = 313.0
offset_right = -1058.0
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 2
value = 100.0
fill_mode = 3

[node name="Label" type="Label" parent="UI/OxigenBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "

Oâ‚‚"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthBar" type="ProgressBar" parent="UI"]
modulate = Color(1, 0.231373, 0.231373, 1)
self_modulate = Color(1, 0, 0, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 106.0
offset_top = 314.0
offset_right = -970.0
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 2
value = 100.0
fill_mode = 3

[node name="Label" type="Label" parent="UI/HealthBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "

HP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Inventory" parent="UI" instance=ExtResource("7_g6qgq")]
visible = false
debug_inventory = Array[PackedScene]([ExtResource("3_rewrb"), ExtResource("4_826q0"), ExtResource("4_826q0"), ExtResource("4_826q0")])

[connection signal="body_entered" from="CatchItem" to="BreathManager" method="_on_catch_item_body_entered"]
[connection signal="body_entered" from="CatchItem" to="UI/Inventory" method="_on_catch_item_body_entered"]

[editable path="Player_visuals"]
